[package]
name = "sd-image-to-params"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = "1.45.1"
freya = "0.3.4"

walkdir = "2.5.0"
image = "0.25.6"
copypasta = "0.10.2"

reqwest = "0.12.19"
serde_json = "1.0.140"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"