[package]
name = "sd-extract-output"
version = "1.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
tokio = "1.45.1"
freya = "0.3.4"

open = "5.3.2"
walkdir = "2.5.0"
image = "0.25.6"
copypasta = "0.10.2"

reqwest = "0.12.20"
serde_json = "1.0.140"

[build-dependencies]
winresource = "0.1.22"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product-name = "SD E/O"
identifier = "com.airfish.sd-extract-output"
icons = ["icon.png", "icon.ico"]

[package.metadata.winresource]
ProductName = "SD E/O"